[gd_scene load_steps=27 format=3 uid="uid://64k58oota51r"]

[ext_resource type="Texture2D" uid="uid://5h87kqikp2c3" path="res://assets/ship.png" id="1_ig0qx"]
[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_jadqm"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_dq7hj"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_toawy"]
[ext_resource type="Texture2D" uid="uid://rhmfd5ao8l64" path="res://assets/ship_flame.png" id="3_xyfni"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="4_j3m20"]
[ext_resource type="Resource" uid="uid://cgq1ofnephp18" path="res://player_ship/ship_move_statas.tres" id="4_mrcex"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="6_551ep"]
[ext_resource type="PackedScene" uid="uid://cbssbi5ey6sl3" path="res://projectiles/laser.tscn" id="7_1s8nf"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_65orp"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="11_edj05"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="12_s0rgq"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="13_57kwg"]
[ext_resource type="PackedScene" uid="uid://c0yadb3gox1e8" path="res://effects/explosion_effect.tscn" id="14_os3ml"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="15_esr6r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fo38e"]
atlas = ExtResource("3_xyfni")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1luth"]
atlas = ExtResource("3_xyfni")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xtws"]
atlas = ExtResource("3_xyfni")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r5c4"]
atlas = ExtResource("3_xyfni")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ngaj"]
atlas = ExtResource("3_xyfni")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_afk83"]
atlas = ExtResource("3_xyfni")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_esccx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo38e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1luth")
}],
"loop": true,
"name": &"center",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xtws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r5c4")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ngaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afk83")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wkyfr"]
atlas = ExtResource("1_ig0qx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrgjg"]
atlas = ExtResource("1_ig0qx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_04c6k"]
atlas = ExtResource("1_ig0qx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_j13ha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkyfr")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrgjg")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04c6k")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_jadqm")

[node name="Anchor" type="Node2D" parent="."]

[node name="FlameAnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 15)
sprite_frames = SubResource("SpriteFrames_esccx")
animation = &"center"
autoplay = "center"
frame = 1
frame_progress = 0.565501

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_j13ha")
animation = &"center"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_dq7hj")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_toawy")
move_stats = ExtResource("4_mrcex")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_j3m20")
actor = NodePath("..")

[node name="LeftCannon" type="Marker2D" parent="."]
position = Vector2(-5, -4)

[node name="RightCannon" type="Marker2D" parent="."]
position = Vector2(5, -4)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("6_551ep")
scene = ExtResource("7_1s8nf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_65orp")
sprite = NodePath("../Anchor")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("11_edj05")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("12_s0rgq")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("13_57kwg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-1, -7, 1, -7, 5, 0, 8, 2, 8, 4, 5, 4, 5, 7, -5, 7, -5, 4, -8, 4, -8, 2, -5, 0)

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("6_551ep")
scene = ExtResource("14_os3ml")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("15_esr6r")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")
